(Feat) fix elements overlapping

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -11,7 +11,7 @@
  *  @license    http://www.pimcore.org/license     GPLv3 and PCL
  */
 
-:is(.ql-color-picker .ql-picker-label, .ql-icon-picker .ql-picker-label) svg {
+ :is(.ql-color-picker .ql-picker-label, .ql-icon-picker .ql-picker-label) svg {
     float: left;
 }
 
@@ -45,7 +45,10 @@
     z-index: 9999;
 }
 
-
+.ql-container.ql-editor-active {
+    max-height: calc(3 * 15px) !important;
+    min-height: auto;
+}
 
 .modal__bg {
     position: fixed;
